# Drone-VGGT

./: .gitmodules  README.md  pixi.toml  pyproject.toml
SfM/: feature_matcher.py  hierarchical_feature_matcher.py  incremental_feature_matcher.py  merge_confidence.py  merge_construction.py  merge_full_pipeline.py  point_cloud_utils.py  preprocessing_undistort_images.py  reconstruction_alignment.py  reconstruction_rename.py  sfm_extraction.py  sfm_visualizer.py
SfM/convert/: __init__.py  convert_to_fastgs.py
SfM/delaunay/: delaunay_mesh.py
SfM/dsm/: __init__.py  build_dsm.py  export_dsm.py
SfM/load_model/: __init__.py  base.py  fastvggt_loader.py  mapanything_loader.py  vggt_loader.py
SfM/merge/: merge_confidence.py  merge_confidence_blend.py  merge_full_pipeline.py  merge_points_only.py
SfM/utils/: boundary_filter.py  georef.py  gps.py  las_export.py  point_filter.py  statistical_filter.py  voxel_downsample.py  xmp.py
assets/: README_CN.md
mapping/: visualize_sfm_reconstruction.py
scripts/: demo_images_only_inference.py  demo_inference_on_colmap_outputs.py
