[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronemapanything"
version = "1.1.0"
description = "Universal Feed-Forward Metric 3D Reconstruction with Drone Mapping"
readme = "readme.md"
authors = [{ name = "Zhihao Jia", email = "jiazhihaojzh@126.com" }]
requires-python = ">=3.10.0"
dependencies = [
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "opencv-python-headless==4.10.0.84",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "requests",
    "rerun-sdk~=0.24.1",
    "safetensors",
    "tensorboard",
    "tqdm",
    "trimesh",
    "uniception==0.1.6",
]

[project.optional-dependencies]
data = ["pandas"]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]
colmap = [
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "pycolmap==3.10.0"
]
gradio = ["gradio", "spaces"]
radio = ["timm"]
# External models for benchmarking
anycalib = ["anycalib @ git+https://github.com/javrtg/AnyCalib.git@main#egg=anycalib"]
dust3r = [
    "croco @ git+https://github.com/naver/croco.git@croco_module#egg=croco",
    "dust3r @ git+https://github.com/naver/dust3r.git@dust3r_setup#egg=dust3r",
]
mast3r = ["mast3r @ git+https://github.com/Nik-V9/mast3r.git@main#egg=mast3r"]
must3r = ["must3r @ git+https://github.com/naver/must3r.git@main#egg=must3r"]
pow3r = ["pow3r @ git+https://github.com/Nik-V9/pow3r.git@main#egg=pow3r"]
depth-anything-3 = ["depth-anything-3 @ git+https://github.com/Nik-V9/depth-anything-3.git@main#egg=depth-anything-3"]
rmvd = ["rmvd @ git+https://github.com/infinity1096/robustmvd.git@master#egg=rmvd"]

# Install all optional dependencies
all = [
    "dronemapanything[anycalib]",
    "dronemapanything[colmap]",
    "dronemapanything[data]",
    "dronemapanything[depth-anything-3]",
    "dronemapanything[dev]",
    "dronemapanything[dust3r]",
    "dronemapanything[gradio]",
    "dronemapanything[mast3r]",
    "dronemapanything[must3r]",
    "dronemapanything[pow3r]",
    "dronemapanything[radio]",
    "dronemapanything[rmvd]",
]

# Setuptools configuration
[tool.setuptools]
packages = ["dronemapanything"]

[tool.setuptools.package-data]
"dronemapanything" = ["**/*"]

# Ruff for linting
[tool.ruff]
lint.extend-select = ["I"]
target-version = "py310"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false
known-first-party = ["dronemapanything", "uniception"]

# ========================================================================= #
# Pixi 配置
# ========================================================================= #
[tool.pixi.project]
# 使用清华镜像源（国内访问更稳定）
channels = ["https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-arm64"]

# 系统要求 - 匹配你的 CUDA 11.8 环境
[tool.pixi.system-requirements]
cuda = "11.8"

# ========== 通用 Conda 依赖 ==========
[tool.pixi.dependencies]
# Python 版本
python = "3.10.*"

# 科学计算
numpy = ">=1.26,<2"
scipy = ">=1.11"
scikit-image = ">=0.21"
scikit-learn = ">=1.3"

# 点云和 3D 处理
open3d = ">=0.17"

# 图像处理
opencv = ">=4.8"
pillow = ">=10.0"

# 可视化
matplotlib = ">=3.8"

# 数据处理
tqdm = ">=4.65"

# 其他工具
einops = ">=0.7"
safetensors = ">=0.4"
huggingface_hub = ">=0.20"

# 地理空间
gdal = ">=3.8"
rasterio = ">=1.3"
pyproj = ">=3.6"
shapely = ">=2.0"

# 构建工具
pip = ">=23.0"

# ========== 平台特定 Conda 依赖 ==========
[tool.pixi.target.linux-64.dependencies]
cuda-version = "==11.8"

[tool.pixi.target.win-64.dependencies]
cuda-version = "==11.8"

# ========== 通用 PyPI 依赖 ==========
[tool.pixi.pypi-dependencies]
# 本地包（editable 模式，会自动安装 [project].dependencies）
dronemapanything = { path = ".", editable = true }

# 额外依赖（不在 [project].dependencies 中的）
# 深度学习工具
kornia = ">=0.7"

# 可视化
viser = ">=0.1"
plotly = ">=5.18"

# GPS 和坐标转换
pymap3d = ">=3.0"

# LAS 文件支持
laspy = ">=2.5"

# 网格处理
pymeshlab = ">=2023.12"

# ========== 平台特定 PyPI 依赖 ==========
# Linux x86_64
[tool.pixi.target.linux-64.pypi-dependencies]
torch = { version = "==2.3.1", index = "https://download.pytorch.org/whl/cu118" }
torchvision = { version = "==0.18.1", index = "https://download.pytorch.org/whl/cu118" }
torchaudio = { version = "==2.3.1", index = "https://download.pytorch.org/whl/cu118" }

# Windows x86_64
[tool.pixi.target.win-64.pypi-dependencies]
torch = { version = "==2.3.1", index = "https://download.pytorch.org/whl/cu118" }
torchvision = { version = "==0.18.1", index = "https://download.pytorch.org/whl/cu118" }
torchaudio = { version = "==2.3.1", index = "https://download.pytorch.org/whl/cu118" }

# Linux ARM64 (Jetson 等)
[tool.pixi.target.linux-aarch64.pypi-dependencies]
torch = ">=2.0"
torchvision = ">=0.15"
torchaudio = ">=2.0"

# macOS ARM64 (Apple Silicon)
[tool.pixi.target.osx-arm64.pypi-dependencies]
torch = ">=2.0"
torchvision = ">=0.15"
torchaudio = ">=2.0"

# ========== Feature: data ==========
[tool.pixi.feature.data.dependencies]
pandas = ">=2.0"

# ========== Feature: dev ==========
# 使用 dronemapanything[dev] 安装，通过本地包的 optional-dependencies
[tool.pixi.feature.dev.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["dev"] }

# ========== Feature: colmap ==========
[tool.pixi.feature.colmap.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["colmap"] }

# ========== Feature: gradio ==========
[tool.pixi.feature.gradio.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["gradio"] }

# ========== Feature: radio ==========
[tool.pixi.feature.radio.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["radio"] }

# ========== Feature: anycalib ==========
[tool.pixi.feature.anycalib.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["anycalib"] }

# ========== Feature: dust3r ==========
[tool.pixi.feature.dust3r.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["dust3r"] }

# ========== Feature: mast3r ==========
[tool.pixi.feature.mast3r.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["mast3r"] }

# ========== Feature: must3r ==========
[tool.pixi.feature.must3r.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["must3r"] }

# ========== Feature: pow3r ==========
[tool.pixi.feature.pow3r.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["pow3r"] }

# ========== Feature: depth-anything-3 ==========
[tool.pixi.feature.depth-anything-3.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["depth-anything-3"] }

# ========== Feature: rmvd ==========
[tool.pixi.feature.rmvd.pypi-dependencies]
dronemapanything = { path = ".", editable = true, extras = ["rmvd"] }

# ========== 任务定义 ==========
[tool.pixi.tasks]
# 安装 LightGlue（手动安装，避免依赖冲突）
install-lightglue = "pip install git+https://github.com/cvg/LightGlue.git --no-deps"

# 安装第三方子模块
install-vggt = "pip install -e third/vggt --no-deps"
install-fastvggt = "pip install -e third/fastvggt --no-deps"

# 完整安装
setup = { depends-on = ["install-lightglue", "install-vggt", "install-fastvggt"] }

# 运行增量 SfM
run-sfm = "python SfM/incremental_feature_matcher.py"

# 运行 Delaunay 网格化
run-mesh = "python SfM/delaunay/delaunay_mesh.py"

# 生成 DSM
run-dsm = "python SfM/delaunay/ply_to_dsm.py"

# 代码格式检查
lint = "ruff check ."
format = "ruff format ."

# 显示环境信息
info = "python -c \"import torch; print(f'PyTorch: {torch.__version__}'); print(f'CUDA: {torch.cuda.is_available()}'); print(f'Device: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"CPU\"}')\""

# ========== 环境定义 ==========
[tool.pixi.environments]
# 默认环境
default = { features = ["data"], solve-group = "default" }

# 开发环境
dev = { features = ["data", "dev"], solve-group = "default" }

# COLMAP 环境
colmap = { features = ["data", "colmap"], solve-group = "default" }

# Gradio 界面环境
gradio = { features = ["data", "gradio"], solve-group = "default" }

# 完整环境（包含所有功能）
full = { features = ["data", "dev", "colmap", "gradio", "radio"], solve-group = "default" }

# 外部模型环境
benchmarks = { features = ["data", "colmap", "anycalib", "dust3r", "mast3r", "must3r", "pow3r", "depth-anything-3", "rmvd"], solve-group = "default" }
